* More QA items from latest sprint * new 'Other' tab in product info * hide cloned social icons on desktop view * prevent button overflow in Quick Shop modal on medium screen * show 'more info' link only on Quick Shop modal

--- a/src/sass/bootstrap/_modals.scss
+++ b/src/sass/bootstrap/_modals.scss
@@ -142,7 +142,7 @@
         margin-bottom: 0;
 
         // account for input[type="submit"] which gets the bottom margin like all other inputs
-   
+
     }
 
     // but override that for button groups
@@ -180,6 +180,10 @@
     // Modal sizes
     .modal-sm {
         width: $modal-sm;
+    }
+
+    .modal-lg {
+        width: $screen-sm; // 768px
     }
 }
 
