--- a/src/sass/bootstrap/_product-detail.scss
+++ b/src/sass/bootstrap/_product-detail.scss
@@ -14,6 +14,10 @@
 
 }
 
+// display more info link only in modal
+.pdp-more-info-link { display: none; }
+body.modal-open .pdp-more-info-link { display: block; }
+
 // product title
 .pdp-product-title {
   text-align: center;
